--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "framer-motion": "^10.12.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.5.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "sass": "^1.63.6",
