--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "framer-motion": "^10.12.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-flatpickr": "^3.10.13",
     "react-intersection-observer": "^9.5.2",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "sass": "^1.63.6",
