--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.63.6",
     "web-vitals": "^2.1.4"
   },
